small bug of white space cleared

--- a/Day_1_Pomodoro_App/style.css
+++ b/Day_1_Pomodoro_App/style.css
@@ -12,13 +12,16 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+html{
+    height: -webkit-fill-available;
+}
 body {
   
     /* background: red; */
     /* color:red; */
     font-family: 'Montserrat', sans-serif;
-
+    overflow: hidden;
+    height: -webkit-fill-available;
 }
 
 section {
