--- a/Day_2_Food_cart/style.css
+++ b/Day_2_Food_cart/style.css
@@ -31,6 +31,7 @@ body{
     height: 100vh;
     justify-content: center;
     background-color: var(--bg-color);
+    padding-bottom: 30px;
 }
 .heading{
     position: absolute;
