--- a/Day_3_Piano/styles.css
+++ b/Day_3_Piano/styles.css
@@ -9,7 +9,7 @@ html, body{
 body {
   background: #37B2C3;
   overflow: hidden;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   /* position: absolute;
   top: 0;
   bottom: 0; */
